--- a/css/menu_admin.css
+++ b/css/menu_admin.css
@@ -184,7 +184,8 @@ body {
     display: inline;
 }
 
-#bloc_button_user_add {
+#bloc_button_user_add, 
+#bloc_button_user_update {
     display: flex;
     justify-content: space-between;
     margin-top: -0.6rem;
