--- a/css/menu_admin.css
+++ b/css/menu_admin.css
@@ -218,7 +218,8 @@ body {
 }
 
 #select_type,
-#select_user {
+#select_user,
+.select_form {
     /*appearance: none;*/
     margin-left: 1rem; 
     min-height: 1.6rem;
